--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"name": "GrowthExperiments",
 	"private": true,
 	"scripts": {
 		"api-testing": "mocha --require tests/api-testing/fixtures.cjs --parallel --recursive tests/api-testing",
@@ -11,22 +12,22 @@
 	"devDependencies": {
 		"@vue/test-utils": "2.0.0-rc.18",
 		"@vue/vue3-jest": "27.0.0-alpha.4",
-		"@wdio/cli": "7.16.10",
-		"@wdio/devtools-service": "7.16.10",
+		"@wdio/cli": "7.19.7",
+		"@wdio/devtools-service": "7.19.7",
 		"@wdio/dot-reporter": "7.16.6",
 		"@wdio/junit-reporter": "7.16.6",
-		"@wdio/local-runner": "7.16.10",
+		"@wdio/local-runner": "7.19.7",
 		"@wdio/mocha-framework": "7.16.6",
-		"api-testing": "1.4.2",
+		"api-testing": "1.5.0",
 		"babel-core": "6.26.3",
 		"eslint-config-wikimedia": "0.22.1",
-		"grunt": "1.4.1",
+		"grunt": "1.5.2",
 		"grunt-banana-checker": "0.9.0",
 		"grunt-eslint": "24.0.0",
 		"grunt-stylelint": "0.17.0",
 		"jest": "27.4.7",
 		"jquery": "3.6.0",
-		"stylelint-config-wikimedia": "0.12.2",
+		"stylelint-config-wikimedia": "0.13.0",
 		"svgo": "2.8.0",
 		"vue": "3.2.27",
 		"wdio-intercept-service": "4.2.2",
