--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"name": "GrowthExperiments",
 	"private": true,
 	"scripts": {
 		"api-testing": "mocha --require tests/api-testing/fixtures.cjs --parallel --recursive tests/api-testing",
@@ -8,15 +9,15 @@
 		"test": "grunt test"
 	},
 	"devDependencies": {
-		"@wdio/cli": "7.16.10",
-		"@wdio/devtools-service": "7.16.10",
+		"@wdio/cli": "7.19.7",
+		"@wdio/devtools-service": "7.19.7",
 		"@wdio/dot-reporter": "7.16.6",
 		"@wdio/junit-reporter": "7.16.6",
-		"@wdio/local-runner": "7.16.10",
+		"@wdio/local-runner": "7.19.7",
 		"@wdio/mocha-framework": "7.16.6",
 		"api-testing": "1.4.2",
 		"eslint-config-wikimedia": "0.21.0",
-		"grunt": "1.4.0",
+		"grunt": "1.5.3",
 		"grunt-banana-checker": "0.9.0",
 		"grunt-eslint": "23.0.0",
 		"grunt-stylelint": "0.16.0",
